[gd_scene load_steps=10 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://cdmkfmd2agdn8" path="res://brackeys-proto-controller-main/proto_controller/proto_controller.gd" id="1_ucva2"]
[ext_resource type="PackedScene" uid="uid://k8c7sh4fb1h4" path="res://rope.tscn" id="2_qmbkt"]
[ext_resource type="Script" uid="uid://bgj3g8kal1ufo" path="res://brackeys-proto-controller-main/proto_controller/grapple_controller.gd" id="2_qxduv"]
[ext_resource type="Script" uid="uid://fbm68f0msrrw" path="res://brackeys-proto-controller-main/proto_controller/ItemController.gd" id="4_nqm15"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qmbkt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nqm15"]

[node name="ProtoController" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ucva2")
input_left = "move_left"
input_right = "move_right"
input_forward = "move_up"
input_back = "move_down"

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, -1, -35)

[node name="Rope" parent="Head/Camera3D" instance=ExtResource("2_qmbkt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, -0.5)
visible = false

[node name="HeldItem" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.3, -0.79442215, -0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/Camera3D/HeldItem"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 2, 0)
mesh = SubResource("CapsuleMesh_qmbkt")

[node name="aim" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, -1, -2000)
collision_mask = 3

[node name="hurtbox" type="Area3D" parent="Head/Camera3D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/hurtbox"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.70000005, -0.6)
shape = SubResource("SphereShape3D_nqm15")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
ignore_time_scale = true

[node name="WallJumpCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
ignore_time_scale = true

[node name="GrappleController" type="Node" parent="." node_paths=PackedStringArray("ray", "rope", "cooldown")]
script = ExtResource("2_qxduv")
ray = NodePath("../Head/Camera3D/RayCast3D")
rope = NodePath("../Head/Camera3D/Rope")
cooldown = NodePath("../GrappleCooldown")

[node name="GrappleCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[node name="ItemController" type="Node" parent="." node_paths=PackedStringArray("heldItem")]
script = ExtResource("4_nqm15")
heldItem = NodePath("../Head/Camera3D/HeldItem")

[connection signal="body_entered" from="Head/Camera3D/hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WallJumpCooldown" to="." method="_on_wall_jump_cooldown_timeout"]
[connection signal="timeout" from="GrappleCooldown" to="GrappleController" method="_on_grapple_cooldown_timeout"]
